Added basic event handler for the animal class (now inherited from EventArgs, to pass full object through event). Also included ObjectDumper class for debugging C# objects.

--- a/throwaways/Jahfer/GameComponentThrowaway/GameComponentThrowaway/GameComponentThrowaway/GameComponentThrowaway.csproj
+++ b/throwaways/Jahfer/GameComponentThrowaway/GameComponentThrowaway/GameComponentThrowaway/GameComponentThrowaway.csproj
@@ -111,6 +111,7 @@
     <Compile Include="AnimalManager.cs" />
     <Compile Include="Biome.cs" />
     <Compile Include="BiomeManager.cs" />
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Plant.cs" />
     <Compile Include="PlantManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
