--- a/throwaways/Matt/VectorField/VectorField/VectorField/VectorField.csproj
+++ b/throwaways/Matt/VectorField/VectorField/VectorField/VectorField.csproj
@@ -107,7 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GravityObject.cs" />
+    <Compile Include="GridObject.cs" />
+    <Compile Include="GridObjectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
