--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VectorField</RootNamespace>
-    <AssemblyName>VectorField</AssemblyName>
+    <RootNamespace>Flux</RootNamespace>
+    <AssemblyName>Flux</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\EventController.cs" />
     <Compile Include="GridObject.cs" />
     <Compile Include="GridObjectController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
