--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -116,6 +116,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventManager.cs" />
     <Compile Include="Events\EventController.cs" />
     <Compile Include="GridObject.cs" />
     <Compile Include="GridObjectController.cs" />
@@ -123,6 +124,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Server.cs" />
     <Compile Include="VectorField.cs" />
   </ItemGroup>
   <ItemGroup>
