--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -109,11 +109,15 @@
   <ItemGroup>
     <Compile Include="EventManager.cs" />
     <Compile Include="GridObject.cs" />
-    <Compile Include="GridObjectController.cs" />
+    <Compile Include="GridObjectController.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="UserController.cs" />
     <Compile Include="VectorField.cs" />
   </ItemGroup>
   <ItemGroup>
