--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -109,15 +109,17 @@
   <ItemGroup>
     <Compile Include="EventManager.cs" />
     <Compile Include="GridObject.cs" />
-    <Compile Include="GridObjectController.cs">
+    <Compile Include="GridObjectManager.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Resource.cs" />
+    <Compile Include="ResourceManager.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="UserController.cs" />
+    <Compile Include="UserManager.cs" />
     <Compile Include="VectorField.cs" />
   </ItemGroup>
   <ItemGroup>
