--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -107,20 +107,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventManager.cs" />
-    <Compile Include="GridObject.cs" />
-    <Compile Include="GridObjectManager.cs">
+    <Compile Include="Managers\EventManager.cs" />
+    <Compile Include="Managers\GridManager.cs" />
+    <Compile Include="Objects\GameObject.cs" />
+    <Compile Include="Objects\GridObject.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Managers\GridObjectManager.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Resource.cs" />
-    <Compile Include="ResourceManager.cs" />
+    <Compile Include="Objects\Resource.cs" />
+    <Compile Include="Managers\ResourceManager.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserManager.cs" />
-    <Compile Include="VectorField.cs" />
+    <Compile Include="Objects\User.cs" />
+    <Compile Include="Managers\UserManager.cs" />
+    <Compile Include="Objects\Grid.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -163,6 +167,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
