Split GridObjectManager into separate classes.

--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -107,15 +107,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Managers\CollectorManager.cs" />
+    <Compile Include="Managers\EnemyManager.cs" />
     <Compile Include="Managers\EventManager.cs" />
     <Compile Include="Managers\GridManager.cs" />
     <Compile Include="Objects\Enemy.cs" />
     <Compile Include="Objects\GridObject.cs" />
     <Compile Include="Objects\GameObject.cs" />
     <Compile Include="Objects\Collector.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Managers\GridObjectManager.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
