--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -114,12 +114,14 @@
     <Compile Include="General Managers\EventManager.cs" />
     <Compile Include="General Managers\GridManager.cs" />
     <Compile Include="Object Managers\Manager.cs" />
+    <Compile Include="Object Managers\WormholeManager.cs" />
     <Compile Include="Objects\Enemy.cs" />
     <Compile Include="Objects\GridObject.cs" />
     <Compile Include="Objects\GameObject.cs" />
     <Compile Include="Objects\Collector.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Objects\Wormhole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
