--- a/throwaways/Jahfer/SmoothGrid/SmoothGrid/SmoothGrid/SmoothGrid.csproj
+++ b/throwaways/Jahfer/SmoothGrid/SmoothGrid/SmoothGrid/SmoothGrid.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="FrameRateCounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
