--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -108,14 +108,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="General Managers\ContentManager.cs" />
+    <Compile Include="General Managers\GridManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="General Managers\ScreenManager.cs" />
     <Compile Include="Graphics\Camera.cs" />
-    <Compile Include="Graphics\DefaultCamera.cs" />
     <Compile Include="Helpers\Randomizer.cs" />
     <Compile Include="Graphics\VLine.cs" />
     <Compile Include="Object Managers\CollectorManager.cs" />
     <Compile Include="Object Managers\EnemyManager.cs" />
     <Compile Include="General Managers\EventManager.cs" />
-    <Compile Include="General Managers\GridManager.cs" />
     <Compile Include="Object Managers\Manager.cs" />
     <Compile Include="Object Managers\WormholeManager.cs" />
     <Compile Include="Objects\Enemy.cs" />
