Worked on user cursors

--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -113,6 +113,7 @@
     </Compile>
     <Compile Include="General Managers\ScreenManager.cs" />
     <Compile Include="Graphics\Camera.cs" />
+    <Compile Include="Helpers\Matherize.cs" />
     <Compile Include="Helpers\Randomizer.cs" />
     <Compile Include="Graphics\VLine.cs" />
     <Compile Include="Helpers\Schedualizer.cs" />
