Got 2-sided wormholes working mostly.  Changed some of the force params for stuff.  Added ability to manually set animation frames for the points thing.

--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -136,7 +136,8 @@
     <Compile Include="Objects\Collector.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Objects\Wormhole.cs" />
+    <Compile Include="Objects\Wormhole\Wormhole.cs" />
+    <Compile Include="Objects\Wormhole\WormholePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
