--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -112,6 +112,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="General Managers\ScreenManager.cs" />
+    <Compile Include="Graphics\Drawer3D.cs" />
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Graphics\AnimSprite.cs" />
     <Compile Include="Graphics\Camera.cs" />
