--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Graphics\AnimSprite.cs" />
     <Compile Include="Graphics\Camera.cs" />
+    <Compile Include="Graphics\Light.cs" />
     <Compile Include="Graphics\Notification.cs" />
     <Compile Include="Helpers\Vectorizer.cs" />
     <Compile Include="Helpers\Durationizer.cs" />
