--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\Light.cs" />
     <Compile Include="Graphics\Notification.cs" />
+    <Compile Include="Graphics\TeamColour.cs" />
     <Compile Include="Helpers\Vectorizer.cs" />
     <Compile Include="Helpers\Durationizer.cs" />
     <Compile Include="Helpers\Matherizer.cs" />
