Added "user:newTeam" event. Integrated audio library. User cursor now appears on specified display. Collector boundaries keep the object visible on top and bottom. Resource calculation is now done using 2D, rather than 3D; also switched to a linear translation and an easing function for scaling leaves. Collectors are now tinted the colour of their team.

--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -107,6 +107,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\Audio.cs" />
+    <Compile Include="Audio\fmod.cs" />
+    <Compile Include="Audio\fmod_dsp.cs" />
+    <Compile Include="Audio\fmod_errors.cs" />
+    <Compile Include="Audio\fmod_memoryinfo.cs" />
     <Compile Include="General Managers\ContentManager.cs" />
     <Compile Include="General Managers\GridManager.cs">
       <SubType>Code</SubType>
