--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -149,13 +149,15 @@
     </Compile>
     <Compile Include="Objects\Ground.cs" />
     <Compile Include="Objects\Projectile.cs" />
+    <Compile Include="Objects\Resources\Leaf.cs" />
+    <Compile Include="Objects\Resources\Water.cs" />
     <Compile Include="Objects\WorldObject.cs" />
     <Compile Include="Objects\Wormhole\Wormhole.cs" />
     <Compile Include="Objects\Wormhole\WormholePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Objects\Resource.cs" />
+    <Compile Include="Objects\Resources\Resource.cs" />
     <Compile Include="Object Managers\ResourceManager.cs" />
     <Compile Include="Server\Server.cs" />
     <Compile Include="Objects\User.cs" />
