--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -124,6 +124,8 @@
     <Compile Include="Graphics\Light.cs" />
     <Compile Include="Graphics\Notification.cs" />
     <Compile Include="Graphics\TeamColour.cs" />
+    <Compile Include="Helpers\Tweening\Tweenerizer.cs" />
+    <Compile Include="Helpers\Tweening\TweenObject.cs" />
     <Compile Include="Helpers\Vectorizer.cs" />
     <Compile Include="Helpers\Durationizer.cs" />
     <Compile Include="Helpers\Matherizer.cs" />
