--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Graphics\Notification.cs" />
     <Compile Include="Graphics\Spritesheet.cs" />
     <Compile Include="Graphics\TeamColour.cs" />
+    <Compile Include="Helpers\Shaderizer.cs" />
     <Compile Include="Helpers\Tweening\Tweenerizer.cs" />
     <Compile Include="Helpers\Tweening\TweenObject.cs" />
     <Compile Include="Helpers\Vectorizer.cs" />
