--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -117,14 +117,13 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="General Managers\ScreenManager.cs" />
-    <Compile Include="Graphics\AnimSet.cs" />
+    <Compile Include="Animation\AnimSet.cs" />
     <Compile Include="Graphics\Drawer3D.cs" />
-    <Compile Include="Graphics\Animation.cs" />
-    <Compile Include="Graphics\AnimSprite.cs" />
+    <Compile Include="Animation\Animation.cs" />
+    <Compile Include="Animation\AnimSprite.cs" />
     <Compile Include="Graphics\Camera.cs" />
     <Compile Include="Graphics\Light.cs" />
     <Compile Include="Graphics\Notification.cs" />
-    <Compile Include="Graphics\Spritesheet.cs" />
     <Compile Include="Graphics\TeamColour.cs" />
     <Compile Include="Helpers\Tweening\Tweenerizer.cs" />
     <Compile Include="Helpers\Tweening\TweenObject.cs" />
