--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -127,8 +127,8 @@
     <Compile Include="Graphics\Notification.cs" />
     <Compile Include="Graphics\TeamColour.cs" />
     <Compile Include="Helpers\Shaderizer.cs" />
-    <Compile Include="Helpers\Tweening\Tweenerizer.cs" />
-    <Compile Include="Helpers\Tweening\TweenObject.cs" />
+    <Compile Include="Animation\Tweening\Tweenerizer.cs" />
+    <Compile Include="Animation\Tweening\TweenObject.cs" />
     <Compile Include="Helpers\Vectorizer.cs" />
     <Compile Include="Helpers\Durationizer.cs" />
     <Compile Include="Helpers\Randomizer.cs" />
