CLOUDZ! Still not perfect though. Screen wraparound is finnicky.

--- a/production/Flux/Flux/Flux.csproj
+++ b/production/Flux/Flux/Flux.csproj
@@ -134,12 +134,14 @@
     <Compile Include="Helpers\Randomizer.cs" />
     <Compile Include="Graphics\VLine.cs" />
     <Compile Include="Helpers\Schedualizer.cs" />
+    <Compile Include="Object Managers\CloudManager.cs" />
     <Compile Include="Object Managers\CollectorManager.cs" />
     <Compile Include="Object Managers\EnemyManager.cs" />
     <Compile Include="General Managers\EventManager.cs" />
     <Compile Include="Object Managers\Manager.cs" />
     <Compile Include="Object Managers\WorldManager.cs" />
     <Compile Include="Object Managers\WormholeManager.cs" />
+    <Compile Include="Objects\Cloud.cs" />
     <Compile Include="Objects\Enemies\Enemy.cs" />
     <Compile Include="Objects\Enemies\EnemyBulger.cs">
       <SubType>Code</SubType>
